--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/circle-check-big.svg" />
+    <link rel="icon" type="image/svg+xml" href="/circle-check-big.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donezo</title>
 </head>
